--- a/PianoTime_GIT/app/src/main/res/values/strings.xml
+++ b/PianoTime_GIT/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">PianoTime</string>
+    <string name="sixteenth">SIXTEENTH</string>
+    <string name="half">HALF</string>
+    <string name="whole">WHOLE</string>
+    <string name="EIGHTH" />
+    <string name="FOURTH" />
 </resources>
