--- a/PianoTime_GIT/app/src/main/res/values/strings.xml
+++ b/PianoTime_GIT/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="sixteenth">SIXTEENTH</string>
     <string name="half">HALF</string>
     <string name="whole">WHOLE</string>
-    <string name="EIGHTH" />
-    <string name="FOURTH" />
+    <string name="eighth">EIGHTH</string>
+    <string name="fourth">FOURTH</string>
+    <string name="durarion">Duration</string>
 </resources>
